force-app/main/default/objects/Guest_Person__c/Guest_Person__c.object-meta.xml
<CustomObject>
    <label>Guest Person</label>
    <nameField>
        <label>S No</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Guest_Persons</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>