force-app/main/default/objects/Guest_Person__c/fields/REVA_Guest_House_Booking__c.field-meta.xml
<CustomField>
    <fullName>REVA_Guest_House_Booking__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>REVA Guest House Booking</label>
    <referenceTo>Reva_Guest_House_Booking__c</referenceTo>
    <relationshipName>Persons</relationshipName>
    <type>Lookup</type>
</CustomField>